fix: date picker overflow

--- a/front-end/src/renderer/styles/_layout.scss
+++ b/front-end/src/renderer/styles/_layout.scss
@@ -10,6 +10,10 @@ body {
   min-height: 100vh;
 }
 
+body {
+  overflow: hidden;
+}
+
 ul {
   margin: 0;
   padding: 0;
